<resources>
    <string name="app_name">AndroidFundamentals</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="apply">Apply</string>
    <string name="by_rating">By Rating</string>
    <string name="by_release_date">By Release Date</string>
    <string name="by_name">By Name</string>
    <string name="retry">Retry</string>
    <string name="internet_not_connected">Internet not connected</string>
</resources>